unpackaged/main/default/objects/Initialisation__mdt/Initialisation__mdt.object-meta.xml
<CustomObject>
    <description>CCRM initialisation items</description>
    <label>Initialisation</label>
    <pluralLabel>Initialisations</pluralLabel>
</CustomObject>