unpackaged/main/default/objects/Initialisation__mdt/fields/Account_Transfer_Approval_Exemption__c.field-meta.xml
<CustomField>
    <fullName>Account_Transfer_Approval_Exemption__c</fullName>
    <description>List of profiles which can skip account transfer approval process in certain scenarios. CCRM-177</description>
    <inlineHelpText>List of profiles which can skip account transfer approval process in certain scenarios. CCRM-177</inlineHelpText>
    <label>Account Transfer Approval Exemption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>