unpackaged/main/default/objects/Initialisation__mdt/fields/Account_Transfer_Contract_Email_AU__c.field-meta.xml
<CustomField>
    <fullName>Account_Transfer_Contract_Email_AU__c</fullName>
    <defaultValue>&quot;NationalTradeContracts@bunnings.com.au&quot;</defaultValue>
    <description>The email which is displayed when transferring AU account with non-expired contracts to a Non-TS</description>
    <inlineHelpText>The email which is displayed when transferring AU account with non-expired contracts to a Non-TS</inlineHelpText>
    <label>Account Transfer Contract Email AU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>