unpackaged/main/default/objects/Initialisation__mdt/fields/Account_Transfer_Contract_Email_NZ__c.field-meta.xml
<CustomField>
    <fullName>Account_Transfer_Contract_Email_NZ__c</fullName>
    <defaultValue>&quot;NZCommercialPricing@bunnings.co.nz&quot;</defaultValue>
    <description>The email which is displayed when transferring NZ account with non-expired contracts to a Non-TS</description>
    <inlineHelpText>The email which is displayed when transferring NZ account with non-expired contracts to a Non-TS</inlineHelpText>
    <label>Account Transfer Contract Email NZ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>