unpackaged/main/default/objects/Initialisation__mdt/fields/Account_Transfer_Profile_Exemption__c.field-meta.xml
<CustomField>
    <fullName>Account_Transfer_Profile_Exemption__c</fullName>
    <description>List of profiles which can request account transfer (not necessary skip approval process)</description>
    <inlineHelpText>List of profiles which can request account transfer (not necessary skip approval process)</inlineHelpText>
    <label>Account Transfer Profile Exemption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>