unpackaged/main/default/objects/Initialisation__mdt/fields/Admin_Validation_Exceptions__c.field-meta.xml
<CustomField>
    <fullName>Admin_Validation_Exceptions__c</fullName>
    <description>Lists the Administrator and Integration profiles that are exempt from the restrictions on editing Account and Contact data</description>
    <label>Admin Validation Exceptions</label>
    <type>TextArea</type>
</CustomField>