unpackaged/main/default/objects/Initialisation__mdt/fields/AM_Profiles__c.field-meta.xml
<CustomField>
    <fullName>AM_Profiles__c</fullName>
    <description>Allowed Team Member Profiles when Role is AM / Account Manager (In Store Member and Operations Region objects)</description>
    <inlineHelpText>Allowed Team Member Profiles when Role is AM / Account Manager (In Store Member and Operations Region objects)</inlineHelpText>
    <label>AM Profiles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>