unpackaged/main/default/objects/Initialisation__mdt/fields/Area_BDM_Profiles__c.field-meta.xml
<CustomField>
    <fullName>Area_BDM_Profiles__c</fullName>
    <description>Allowed Team Member Profiles when Role is Area BDM (In Store Member and Operations Region objects)</description>
    <inlineHelpText>Allowed Team Member Profiles when Role is Area BDM (In Store Member and Operations Region objects)</inlineHelpText>
    <label>Area BDM Profiles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>