unpackaged/main/default/objects/Initialisation__mdt/fields/ASM_Profiles__c.field-meta.xml
<CustomField>
    <fullName>ASM_Profiles__c</fullName>
    <description>Allowed Team Member Profiles when Role is ASM (In Store Member and Operations Region objects)</description>
    <inlineHelpText>Allowed Team Member Profiles when Role is ASM (In Store Member and Operations Region objects)</inlineHelpText>
    <label>ASM Profiles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>