unpackaged/main/default/objects/Initialisation__mdt/fields/Assisted_Sale_Profile_Access__c.field-meta.xml
<CustomField>
    <fullName>Assisted_Sale_Profile_Access__c</fullName>
    <description>Profiles that have access to create Assisted Sale Data</description>
    <label>Assisted Sale Profile Access</label>
    <length>255</length>
    <type>Text</type>
</CustomField>