unpackaged/main/default/objects/Initialisation__mdt/fields/AU_Power_Pass_Signup_URL__c.field-meta.xml
<CustomField>
    <fullName>AU_Power_Pass_Signup_URL__c</fullName>
    <label>AU Power Pass Signup URL</label>
    <type>Url</type>
</CustomField>