unpackaged/main/default/objects/Initialisation__mdt/fields/BulkAccTrans_UmGroup_Filter_Profiles__c.field-meta.xml
<CustomField>
    <fullName>BulkAccTrans_UmGroup_Filter_Profiles__c</fullName>
    <description>Umbrella Group is an available filter on Bulk Account Transfer for listed profiles here.</description>
    <label>Umbrella Group Filter Access</label>
    <length>255</length>
    <type>Text</type>
</CustomField>