unpackaged/main/default/objects/Initialisation__mdt/fields/Call_Cycle_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Call_Cycle_Attempts__c</fullName>
    <description>The maximum attempt number for a call cycle task, if set to 1 meaning only 1 reschedule is allowed. Used in conjunction with Activity.Call_Cycle_Attempt__c.</description>
    <inlineHelpText>The maximum attempt number for a call cycle task, if set to 1 meaning only 1 reschedule is allowed.</inlineHelpText>
    <label>Call Cycle Attempts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>