unpackaged/main/default/objects/Initialisation__mdt/fields/Call_Planner_Amber_Background__c.field-meta.xml
<CustomField>
    <fullName>Call_Planner_Amber_Background__c</fullName>
    <defaultValue>&#39;orange&#39;</defaultValue>
    <description>The background color for cells on 2nd page of call planner</description>
    <inlineHelpText>The background color for cells on 2nd page of call planner, must be a valid CSS color name or hex code that starts with #</inlineHelpText>
    <label>Call Planner Amber Background</label>
    <length>20</length>
    <type>Text</type>
</CustomField>