unpackaged/main/default/objects/Initialisation__mdt/fields/Call_Planner_Amber_Foreground__c.field-meta.xml
<CustomField>
    <fullName>Call_Planner_Amber_Foreground__c</fullName>
    <defaultValue>&#39;black&#39;</defaultValue>
    <description>The foreground color for cells on 2nd page of call planner</description>
    <inlineHelpText>The foreground color for cells on 2nd page of call planner, must be a valid CSS color name or hex code that starts with #</inlineHelpText>
    <label>Call Planner Amber Foreground</label>
    <length>20</length>
    <type>Text</type>
</CustomField>