unpackaged/main/default/objects/Initialisation__mdt/fields/Callout_Retry_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Callout_Retry_Batch_Size__c</fullName>
    <description>The number of batch size of Callout Retry.</description>
    <inlineHelpText>The number of batch size of Callout Retry. 100 is the maximum batch size. If not set the batch will use 50 as size.</inlineHelpText>
    <label>Callout Retry Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>