unpackaged/main/default/objects/Initialisation__mdt/fields/CCRM_Account_Default_Owner__c.field-meta.xml
<CustomField>
    <fullName>CCRM_Account_Default_Owner__c</fullName>
    <description>The default CCRM Account Owner when account assignment rules fail to identify a match.</description>
    <label>CCRM Account Default Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>