unpackaged/main/default/objects/Initialisation__mdt/fields/CCRM_Default_NZ_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>CCRM_Default_NZ_Account_Owner__c</fullName>
    <description>The Default Account Owner for assigned for New Zealand accounts when no other assignment rule is met</description>
    <label>CCRM Default NZ Account Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>