unpackaged/main/default/objects/Initialisation__mdt/fields/CCRM_Dummy_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>CCRM_Dummy_Account_Id__c</fullName>
    <label>CCRM Dummy Account Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>