unpackaged/main/default/objects/Initialisation__mdt/fields/CCS_Manager_Profiles__c.field-meta.xml
<CustomField>
    <fullName>CCS_Manager_Profiles__c</fullName>
    <description>Allowed Team Member Profiles when Role is CCS Manager (In Store Member and Operations Region objects)</description>
    <inlineHelpText>Allowed Team Member Profiles when Role is CCS Manager (In Store Member and Operations Region objects)</inlineHelpText>
    <label>CCS Manager Profiles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>