unpackaged/main/default/objects/Initialisation__mdt/fields/CLI_Auto_Approval_Batch_Limit__c.field-meta.xml
<CustomField>
    <fullName>CLI_Auto_Approval_Batch_Limit__c</fullName>
    <description>Query limit</description>
    <inlineHelpText>Query limit</inlineHelpText>
    <label>CLI Auto Approval Batch Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>