unpackaged/main/default/objects/Initialisation__mdt/fields/Contract_Line_Item_Auto_Approval_Buffer__c.field-meta.xml
<CustomField>
    <fullName>Contract_Line_Item_Auto_Approval_Buffer__c</fullName>
    <description>Number of days buffer.</description>
    <inlineHelpText>Contract Amendment Number of days buffer.</inlineHelpText>
    <label>Contract Line Item Auto Approval Buffer</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>