unpackaged/main/default/objects/Initialisation__mdt/fields/Contract_Review_Percent_GP__c.field-meta.xml
<CustomField>
    <fullName>Contract_Review_Percent_GP__c</fullName>
    <defaultValue>10</defaultValue>
    <description>When a contract line item&#39;s GP is lower than The Percent GP, the alert is displayed</description>
    <inlineHelpText>When a contract line item&#39;s GP is lower than The Percent GP, the alert is displayed</inlineHelpText>
    <label>Contract Review Percent GP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>