unpackaged/main/default/objects/Initialisation__mdt/fields/Contract_Review_Read_Only_Profile__c.field-meta.xml
<CustomField>
    <fullName>Contract_Review_Read_Only_Profile__c</fullName>
    <description>Profiles of which users can access contract review page even when the user is not reviewer / approver</description>
    <inlineHelpText>Profiles of which users can access contract review page even when the user is not reviewer / approver</inlineHelpText>
    <label>Contract Review Read Only Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>