unpackaged/main/default/objects/Initialisation__mdt/fields/COS_Existing_Quote_URL__c.field-meta.xml
<CustomField>
    <fullName>COS_Existing_Quote_URL__c</fullName>
    <description>Contains the URL for linking to an existing Quote in COS. COS Id is merged into the URL on from the Quote record.</description>
    <label>COS Existing Quote URL</label>
    <type>Url</type>
</CustomField>