unpackaged/main/default/objects/Initialisation__mdt/fields/COS_New_Quote_URL__c.field-meta.xml
<CustomField>
    <fullName>COS_New_Quote_URL__c</fullName>
    <description>Used on the Opportunity for creating a new Cos Quote.</description>
    <label>COS New Quote URL</label>
    <type>Url</type>
</CustomField>