unpackaged/main/default/objects/Initialisation__mdt/fields/COS_Powerpass_NZ_URL__c.field-meta.xml
<CustomField>
    <fullName>COS_Powerpass_NZ_URL__c</fullName>
    <description>INC1011576</description>
    <label>COS_Powerpass_NZ_URL</label>
    <type>Url</type>
</CustomField>