unpackaged/main/default/objects/Initialisation__mdt/fields/COS_Powerpass_SignUp_URL__c.field-meta.xml
<CustomField>
    <fullName>COS_Powerpass_SignUp_URL__c</fullName>
    <label>COS_Powerpass_SignUp_URL</label>
    <type>Url</type>
</CustomField>