unpackaged/main/default/objects/Initialisation__mdt/fields/COS_Powerpass_URL__c.field-meta.xml
<CustomField>
    <fullName>COS_Powerpass_URL__c</fullName>
    <description>The URL for COS Powerpass Site. 

 - Used in the Onboarding flow button (Launch Powerpass)</description>
    <label>COS_Powerpass_URL</label>
    <type>Url</type>
</CustomField>