unpackaged/main/default/objects/Initialisation__mdt/fields/COS_Product_Sales_Report_URL__c.field-meta.xml
<CustomField>
    <fullName>COS_Product_Sales_Report_URL__c</fullName>
    <label>COS Product Sales Report URL</label>
    <type>Url</type>
</CustomField>