unpackaged/main/default/objects/Initialisation__mdt/fields/COS_Transaction_Sales_Report_URL__c.field-meta.xml
<CustomField>
    <fullName>COS_Transaction_Sales_Report_URL__c</fullName>
    <label>COS Transaction Sales Report URL</label>
    <type>Url</type>
</CustomField>