unpackaged/main/default/objects/Initialisation__mdt/fields/Default_Onboarding_Added_Days__c.field-meta.xml
<CustomField>
    <fullName>Default_Onboarding_Added_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The default added number of days to Onboarding due date.</description>
    <label>Default Onboarding Added Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>