unpackaged/main/default/objects/Initialisation__mdt/fields/Default_TS_Auto_Selection_Exemption__c.field-meta.xml
<CustomField>
    <fullName>Default_TS_Auto_Selection_Exemption__c</fullName>
    <description>List of profiles that can able to manually select the next available Default Trade specialist. CCRM15-417</description>
    <inlineHelpText>List of profiles that can able to manually select the next available Default Trade specialist. CCRM15-417</inlineHelpText>
    <label>Default TS Auto Selection Exemption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>