unpackaged/main/default/objects/Initialisation__mdt/fields/DefaultApprovalRequestEmailSetting__c.field-meta.xml
<CustomField>
    <fullName>DefaultApprovalRequestEmailSetting__c</fullName>
    <description>Upon user provisioning via OKTA, the User field &quot;Receive Approval Request Emails&quot; will be defaulted to the selected value.</description>
    <inlineHelpText>Upon user provisioning via OKTA, the User field &quot;Receive Approval Request Emails&quot; will be defaulted to the selected value.</inlineHelpText>
    <label>Default Approval Request Email Setting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>If I am an approver or delegated approver</fullName>
                <default>true</default>
                <label>If I am an approver or delegated approver</label>
            </value>
            <value>
                <fullName>Only if I am an approver</fullName>
            </value>
            <value>
                <fullName>Only if I am a delegated approver</fullName>
            </value>
            <value>
                <fullName>Never</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>