unpackaged/main/default/objects/Initialisation__mdt/fields/Delegated_Approver_Profile_Exemption__c.field-meta.xml
<CustomField>
    <fullName>Delegated_Approver_Profile_Exemption__c</fullName>
    <description>Profiles of which users are allowed to change other user&#39;s delegated approver.</description>
    <inlineHelpText>Profiles of which users are allowed to change other user&#39;s delegated approver.</inlineHelpText>
    <label>Delegated Approver Profile Exemption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>