unpackaged/main/default/objects/Initialisation__mdt/fields/FileDownload_All_Access__c.field-meta.xml
<CustomField>
    <fullName>FileDownload_All_Access__c</fullName>
    <description>All profiles that can download Contracts and Price Lists</description>
    <label>FileDownload All Access</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>