unpackaged/main/default/objects/Initialisation__mdt/fields/FileDownload_Non_Owner_Price_List_Access__c.field-meta.xml
<CustomField>
    <fullName>FileDownload_Non_Owner_Price_List_Access__c</fullName>
    <description>Non Account Owner Price List ONLY Profiles</description>
    <label>FileDownload Non Owner Price List Access</label>
    <length>255</length>
    <type>Text</type>
</CustomField>