unpackaged/main/default/objects/Initialisation__mdt/fields/FileDownload_Owner_All_Access__c.field-meta.xml
<CustomField>
    <fullName>FileDownload_Owner_All_Access__c</fullName>
    <description>Account Owners</description>
    <label>FileDownload Owner All Access</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>