unpackaged/main/default/objects/Initialisation__mdt/fields/FileDownload_Owner_Price_List_PDF_Access__c.field-meta.xml
<CustomField>
    <fullName>FileDownload_Owner_Price_List_PDF_Access__c</fullName>
    <description>Account Owner Price List CSV ONLY Profiles</description>
    <label>FileDownload Owner Price List PDF Access</label>
    <length>255</length>
    <type>Text</type>
</CustomField>