unpackaged/main/default/objects/Initialisation__mdt/fields/Medallia_Delivery_Additional_Days__c.field-meta.xml
<CustomField>
    <fullName>Medallia_Delivery_Additional_Days__c</fullName>
    <label>Medallia Delivery Additional Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>