unpackaged/main/default/objects/Initialisation__mdt/fields/MicroStrategy_URL__c.field-meta.xml
<CustomField>
    <fullName>MicroStrategy_URL__c</fullName>
    <label>MicroStrategy URL</label>
    <type>Url</type>
</CustomField>