unpackaged/main/default/objects/Initialisation__mdt/fields/New_Zealand_States__c.field-meta.xml
<CustomField>
    <fullName>New_Zealand_States__c</fullName>
    <description>List of New Zealand States separated by commas</description>
    <label>New Zealand States</label>
    <length>255</length>
    <type>Text</type>
</CustomField>