unpackaged/main/default/objects/Initialisation__mdt/fields/NZ_Power_Pass_Signup_URL__c.field-meta.xml
<CustomField>
    <fullName>NZ_Power_Pass_Signup_URL__c</fullName>
    <label>NZ Power Pass Signup URL</label>
    <type>Url</type>
</CustomField>