unpackaged/main/default/objects/Initialisation__mdt/fields/Onboarding_Call_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Call_Attempts__c</fullName>
    <description>Number of allowed call reattempts for the onboarding.</description>
    <label>Onboarding Call Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>