unpackaged/main/default/objects/Initialisation__mdt/fields/Planned_Call_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Planned_Call_End_Time__c</fullName>
    <defaultValue>&#39;7:30&#39;</defaultValue>
    <description>End Time (in 24h format) for events created via Call Planner. Example: 7:30</description>
    <inlineHelpText>End Time (in 24h format) for events created via Call Planner. Example: 7:30</inlineHelpText>
    <label>Planned Call End Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>