unpackaged/main/default/objects/Initialisation__mdt/fields/Planned_Call_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Planned_Call_Start_Time__c</fullName>
    <defaultValue>&#39;7:00&#39;</defaultValue>
    <description>Start Time (in 24h format) for events created via Call Planner. Example: 7:00</description>
    <inlineHelpText>Start Time (in 24h format) for events created via Call Planner. Example: 7:00</inlineHelpText>
    <label>Planned Call Start Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>