unpackaged/main/default/objects/Initialisation__mdt/fields/Pricing_Assignment_Profile_Exemption__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Assignment_Profile_Exemption__c</fullName>
    <description>List of Profiles that are exempted from the Account Pricing Exemption when Account is part of an umbrella Group</description>
    <label>Pricing Assignment Profile Exemption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>