unpackaged/main/default/objects/Initialisation__mdt/fields/Pricing_Assignment_Unassign_Delay__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Assignment_Unassign_Delay__c</fullName>
    <description>Delays execution of queueable job</description>
    <inlineHelpText>Delays execution of queueable job cplUnassignValidateCustomerQueueable</inlineHelpText>
    <label>Pricing Assignment Unassign Delay</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>