unpackaged/main/default/objects/Initialisation__mdt/fields/RCM_Profiles__c.field-meta.xml
<CustomField>
    <fullName>RCM_Profiles__c</fullName>
    <description>Allowed Team Member Profiles when Role is RCM (In Store Member and Operations Region objects)</description>
    <inlineHelpText>Allowed Team Member Profiles when Role is RCM (In Store Member and Operations Region objects)</inlineHelpText>
    <label>RCM Profiles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>