unpackaged/main/default/objects/Initialisation__mdt/fields/Segment_Export_Profile_Exemption__c.field-meta.xml
<CustomField>
    <fullName>Segment_Export_Profile_Exemption__c</fullName>
    <label>Segment Export Profile Exemption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>