unpackaged/main/default/objects/Initialisation__mdt/fields/SSM_Profiles__c.field-meta.xml
<CustomField>
    <fullName>SSM_Profiles__c</fullName>
    <description>Allowed Team Member Profiles when Role is SSM (In Store Member and Operations Region objects)</description>
    <inlineHelpText>Allowed Team Member Profiles when Role is SSM (In Store Member and Operations Region objects)</inlineHelpText>
    <label>SSM Profiles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>