unpackaged/main/default/objects/Initialisation__mdt/fields/Staging_Object_Exemption_Profile__c.field-meta.xml
<CustomField>
    <fullName>Staging_Object_Exemption_Profile__c</fullName>
    <label>Staging Object Exemption Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>