unpackaged/main/default/objects/Initialisation__mdt/fields/Supply_and_Install_Form__c.field-meta.xml
<CustomField>
    <fullName>Supply_and_Install_Form__c</fullName>
    <label>Supply and Install Form</label>
    <type>Url</type>
</CustomField>