unpackaged/main/default/objects/Initialisation__mdt/fields/Supply_Install_Profile_Exemption__c.field-meta.xml
<CustomField>
    <fullName>Supply_Install_Profile_Exemption__c</fullName>
    <description>SFSUP-702: S&amp;I Profiles to raise S&amp;I opportunity type outside of WoB form</description>
    <label>Supply &amp; Install Profile Exemption</label>
    <type>TextArea</type>
</CustomField>