unpackaged/main/default/objects/Initialisation__mdt/fields/SyncAccount_Date_Range__c.field-meta.xml
<CustomField>
    <fullName>SyncAccount_Date_Range__c</fullName>
    <label>SyncAccount Date Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>