unpackaged/main/default/objects/Initialisation__mdt/fields/Time_Delay_for_COS_Integration__c.field-meta.xml
<CustomField>
    <fullName>Time_Delay_for_COS_Integration__c</fullName>
    <label>Time Delay for COS Integration</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>