unpackaged/main/default/objects/Initialisation__mdt/fields/Trade_Specialist_Profiles__c.field-meta.xml
<CustomField>
    <fullName>Trade_Specialist_Profiles__c</fullName>
    <description>Allowed Team Member Profiles when Role is Trade Specialist (In Store Member and Operations Region objects)</description>
    <inlineHelpText>Allowed Team Member Profiles when Role is Trade Specialist (In Store Member and Operations Region objects)</inlineHelpText>
    <label>Trade Specialist Profiles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>