unpackaged/main/default/objects/Initialisation__mdt/fields/WoB_Accepted_File_Formats__c.field-meta.xml
<CustomField>
    <fullName>WoB_Accepted_File_Formats__c</fullName>
    <label>WoB Accepted File Formats</label>
    <length>255</length>
    <type>Text</type>
</CustomField>