unpackaged/main/default/objects/Initialisation__mdt/fields/WoB_Authorized_Profiles__c.field-meta.xml
<CustomField>
    <fullName>WoB_Authorized_Profiles__c</fullName>
    <label>WoB Authorized Profiles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>