unpackaged/main/default/objects/Initialisation__mdt/fields/WOB_Document_Size__c.field-meta.xml
<CustomField>
    <fullName>WOB_Document_Size__c</fullName>
    <inlineHelpText>Restrict attachment more than given size in MB to be uploaded for S&amp;I</inlineHelpText>
    <label>WOB Document Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>