unpackaged/main/default/objects/Initialisation__mdt/fields/WoB_Garage_Door_Colour_Chart__c.field-meta.xml
<CustomField>
    <fullName>WoB_Garage_Door_Colour_Chart__c</fullName>
    <label>WoB Garage Door Colour Chart</label>
    <type>Url</type>
</CustomField>