unpackaged/main/default/objects/Initialisation__mdt/fields/WoB_Garage_Door_Tilt_Door_Brochure__c.field-meta.xml
<CustomField>
    <fullName>WoB_Garage_Door_Tilt_Door_Brochure__c</fullName>
    <label>WoB Garage Door Tilt Door Brochure</label>
    <type>Url</type>
</CustomField>