unpackaged/main/default/objects/Initialisation__mdt/fields/WoB_Garage_Door_WA_Website__c.field-meta.xml
<CustomField>
    <fullName>WoB_Garage_Door_WA_Website__c</fullName>
    <label>WoB Garage Door WA Website</label>
    <type>Url</type>
</CustomField>