unpackaged/main/default/objects/Initialisation__mdt/fields/WOB_Opp_Offer_Tactile__c.field-meta.xml
<CustomField>
    <fullName>WOB_Opp_Offer_Tactile__c</fullName>
    <label>WOB Opp Offer Tactile</label>
    <type>Url</type>
</CustomField>