unpackaged/main/default/objects/Initialisation__mdt/fields/WOB_Opportunity_Offers__c.field-meta.xml
<CustomField>
    <fullName>WOB_Opportunity_Offers__c</fullName>
    <label>WOB Opportunity Offers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>